syntax = "proto3";

package tierkreis.v1alpha1.controller;

import "google/protobuf/timestamp.proto";

message Graph {
  string id = 1; // note: not a Job ID, because multiple jobs may share a graph

  bytes definition = 101;
}

message NodeId {
  repeated string prefix = 1; // example: ["N1", "L3", "N2", "M1"]
  uint32 node_index = 2; 
}

message NodeStatus {
  NodeId id = 1;
  string job_id = 2;
  optional uint32 expected_duration_sec = 3;

  uint32 retry_count = 100;

  optional google.protobuf.Timestamp finished_at = 201;
}
